<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notify-me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup_error_message">Please make sure you enter your roll no hostel properly</string>
    <string name="signup_error_title">oops error!</string>
    <string name="login_error_message">Please make sure you enter your roll no properly</string>
    <string name="login_error_title">oops Error!</string>
    <string name="action_refresh">Refresh</string>
    <string name="logout_label">Logout</string>
    <string name="action_new">New notification</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign up!</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Content</string>
    <string name="save_button">Save</string>
    <string name="edit_error_message">You cannot save with a title</string>
    <string name="edit_error_title">Error!</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_approval">Approval</string>
    <string name="department_code">My Department</string>
    <string name="title_activity_ccw">ccw</string>
    <string name="title_activity_mech">Mech</string>
    <string name="title_activity_aero">Aero</string>
    <string name="title_activity_app_mech">AppMech</string>
    <string name="title_activity_ocean">Ocean</string>
    <string name="title_activity_bio_tech">BioTech</string>
    <string name="title_activity_chen">Chen</string>
    <string name="title_activity_chem">Chem</string>
    <string name="title_activity_civil">Civil</string>
    <string name="title_activity_comp">Comp</string>
    <string name="title_activity_physics">Physics</string>
    <string name="title_activity_elec">Elec</string>
    <string name="title_activity_ed">Ed</string>
    <string name="title_activity_meta">Meta</string>

</resources>
